--- a/src/main/java/com/dyw/client/form/RegisterForm.form
+++ b/src/main/java/com/dyw/client/form/RegisterForm.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.dyw.client.form.RegisterForm">
-  <grid id="27dc6" binding="main" layout-manager="GridBagLayout">
+  <grid id="27dc6" binding="registerForm" layout-manager="GridBagLayout">
     <constraints>
       <xy x="20" y="20" width="1223" height="817"/>
     </constraints>
