--- a/src/main/java/com/dyw/client/form/IntelligentApplicationForm.form
+++ b/src/main/java/com/dyw/client/form/IntelligentApplicationForm.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.dyw.client.form.IntelligentApplicationForm">
   <grid id="27dc6" binding="intelligentApplicationForm" layout-manager="GridBagLayout">
     <constraints>
-      <xy x="20" y="20" width="598" height="400"/>
+      <xy x="20" y="20" width="1052" height="590"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -38,6 +38,15 @@
                     </constraints>
                     <properties>
                       <text value="实时预览"/>
+                    </properties>
+                  </component>
+                  <component id="57957" class="javax.swing.JButton" binding="playButton">
+                    <constraints>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <gridbag weightx="0.0" weighty="0.0"/>
+                    </constraints>
+                    <properties>
+                      <text value="播放"/>
                     </properties>
                   </component>
                 </children>
