--- a/src/main/java/com/dyw/client/functionForm/MonitorFunction.form
+++ b/src/main/java/com/dyw/client/functionForm/MonitorFunction.form
@@ -21,7 +21,7 @@
       </component>
       <component id="7fd8f" class="javax.swing.JLabel" binding="monitorObjectLabel">
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
           <gridbag top="0" left="0" bottom="30" right="50" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
@@ -31,7 +31,7 @@
       </component>
       <component id="7cd08" class="javax.swing.JLabel" binding="monitorRangeLabel">
         <constraints>
-          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
           <gridbag top="0" left="0" bottom="30" right="50" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
@@ -41,7 +41,7 @@
       </component>
       <component id="9ecbe" class="javax.swing.JLabel" binding="monitorThresholdLabel">
         <constraints>
-          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
           <gridbag top="0" left="0" bottom="30" right="50" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
@@ -51,7 +51,7 @@
       </component>
       <component id="e21cc" class="javax.swing.JLabel" binding="monitorReasonLabel">
         <constraints>
-          <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
           <gridbag top="0" left="0" bottom="30" right="50" weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
@@ -72,7 +72,7 @@
       </component>
       <component id="a516e" class="javax.swing.JTextField" binding="monitorThresholdText">
         <constraints>
-          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
           <gridbag top="0" left="0" bottom="30" right="0" weightx="0.0" weighty="0.0"/>
@@ -84,7 +84,7 @@
       </component>
       <component id="bd34f" class="javax.swing.JTextField" binding="monitorReasonText">
         <constraints>
-          <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
           <gridbag top="0" left="0" bottom="30" right="0" weightx="0.0" weighty="0.0"/>
@@ -96,7 +96,7 @@
       </component>
       <component id="8a23b" class="javax.swing.JButton" binding="monitorConfirmButton">
         <constraints>
-          <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
           <gridbag weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
@@ -105,47 +105,26 @@
       </component>
       <component id="a0854" class="javax.swing.JButton" binding="monitorCancelButton">
         <constraints>
-          <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
           <gridbag weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
           <text value="取消"/>
         </properties>
       </component>
-      <component id="4ca8b" class="com.dyw.client.tool.MultiComboBox" binding="monitorObjectCombo" custom-create="true">
+      <component id="aa3d9" class="com.dyw.client.tool.MultiComboBox" binding="monitorObjectCombo" custom-create="true">
         <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
           <gridbag weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties/>
       </component>
-      <component id="e4192" class="com.dyw.client.tool.MultiComboBox" binding="monitorRangeCombo" custom-create="true">
+      <component id="45e2a" class="com.dyw.client.tool.MultiComboBox" binding="monitorRangeCombo" custom-create="true">
         <constraints>
-          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
           <gridbag weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties/>
-      </component>
-      <component id="d5a98" class="javax.swing.JLabel" binding="monitorTypeLabel">
-        <constraints>
-          <grid row="1" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-          <gridbag top="0" left="0" bottom="30" right="50" weightx="0.0" weighty="0.0"/>
-        </constraints>
-        <properties>
-          <font size="24"/>
-          <text value="布控类型"/>
-        </properties>
-      </component>
-      <component id="9b828" class="javax.swing.JComboBox" binding="monitorTypeComboBox">
-        <constraints>
-          <grid row="2" column="1" row-span="2" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-          <gridbag top="0" left="0" bottom="30" right="0" weightx="0.0" weighty="0.0"/>
-        </constraints>
-        <properties>
-          <font size="20"/>
-        </properties>
       </component>
     </children>
   </grid>
