--- a/src/main/java/com/dyw/client/form/AlarmHistoryForm.form
+++ b/src/main/java/com/dyw/client/form/AlarmHistoryForm.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.dyw.client.form.AlarmHistoryForm">
   <grid id="27dc6" binding="alarmHistoryForm" layout-manager="GridBagLayout">
     <constraints>
-      <xy x="20" y="20" width="1073" height="798"/>
+      <xy x="20" y="20" width="1359" height="798"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -14,7 +14,136 @@
         </constraints>
         <properties/>
         <border type="none"/>
-        <children/>
+        <children>
+          <component id="705b1" class="javax.swing.JComboBox" binding="fdLibSelectComboBox">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <gridbag top="0" left="10" bottom="0" right="10" weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties>
+              <font size="20"/>
+            </properties>
+          </component>
+          <component id="547e9" class="javax.swing.JLabel" binding="minSimilarityLabel">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <gridbag top="0" left="10" bottom="0" right="10" weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties>
+              <font size="20"/>
+              <text value="最小相似度："/>
+            </properties>
+          </component>
+          <component id="6b33" class="javax.swing.JTextField" binding="minSimilarityText">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+              <gridbag top="0" left="10" bottom="0" right="10" weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties>
+              <font size="20"/>
+              <preferredSize width="50" height="37"/>
+              <text value="0.00"/>
+            </properties>
+          </component>
+          <component id="d15cc" class="javax.swing.JLabel" binding="maxSimilarityLabel">
+            <constraints>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <gridbag top="0" left="10" bottom="0" right="10" weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties>
+              <font size="20"/>
+              <text value="最大相似度："/>
+            </properties>
+          </component>
+          <component id="84e4d" class="javax.swing.JTextField" binding="maxSimilarityText">
+            <constraints>
+              <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+              <gridbag top="0" left="10" bottom="0" right="10" weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties>
+              <font size="20"/>
+              <preferredSize width="50" height="30"/>
+              <text value="1.00"/>
+            </properties>
+          </component>
+          <component id="e0c6e" class="javax.swing.JLabel" binding="maxResultNumberLabel">
+            <constraints>
+              <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <gridbag top="0" left="10" bottom="0" right="10" weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties>
+              <font size="20"/>
+              <text value="查询总数："/>
+            </properties>
+          </component>
+          <component id="9c89f" class="javax.swing.JTextField" binding="maxResultNumberText">
+            <constraints>
+              <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+              <gridbag top="0" left="10" bottom="0" right="10" weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties>
+              <font size="20"/>
+              <preferredSize width="50" height="30"/>
+              <text value="1000"/>
+            </properties>
+          </component>
+          <component id="83c4d" class="javax.swing.JLabel" binding="snapStartTimeLabel">
+            <constraints>
+              <grid row="0" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <gridbag top="0" left="10" bottom="0" right="10" weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties>
+              <font size="20"/>
+              <text value="开始时间："/>
+            </properties>
+          </component>
+          <component id="8b83d" class="com.dyw.client.service.DateSelectorButtonService" binding="snapStartTimeButton" custom-create="true">
+            <constraints>
+              <grid row="0" column="8" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <gridbag top="0" left="10" bottom="0" right="10" weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties>
+              <font size="20"/>
+              <text value="2019-04-10 12:24:17"/>
+            </properties>
+          </component>
+          <component id="c78d6" class="javax.swing.JLabel" binding="snapEndTimeLabel">
+            <constraints>
+              <grid row="0" column="9" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <gridbag top="0" left="10" bottom="0" right="10" weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties>
+              <font size="20"/>
+              <text value="结束时间："/>
+            </properties>
+          </component>
+          <component id="96195" class="com.dyw.client.service.DateSelectorButtonService" binding="snapEndTimeButton" custom-create="true">
+            <constraints>
+              <grid row="0" column="10" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <gridbag top="0" left="10" bottom="0" right="10" weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties>
+              <font size="20"/>
+              <text value="2019-04-10 12:24:17"/>
+            </properties>
+          </component>
+          <component id="ddaaf" class="javax.swing.JButton" binding="searchButton">
+            <constraints>
+              <grid row="0" column="11" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <gridbag top="0" left="10" bottom="0" right="10" weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties>
+              <font size="20"/>
+              <text value="查询"/>
+            </properties>
+          </component>
+        </children>
       </grid>
       <grid id="507a0" binding="alarmHistoryContentPanel" layout-manager="GridBagLayout">
         <constraints>
