2019年4月15日18点10分

--- a/src/main/java/com/dyw/client/form/RegisterForm.form
+++ b/src/main/java/com/dyw/client/form/RegisterForm.form
@@ -51,10 +51,11 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="4651e" class="javax.swing.JList" binding="waitStaffList">
+                  <component id="513e4" class="javax.swing.JTable" binding="waitStaffTable">
                     <constraints/>
                     <properties>
                       <font size="20"/>
+                      <rowHeight value="30"/>
                     </properties>
                   </component>
                 </children>
