--- a/src/main/java/com/dyw/client/form/RegisterForm.form
+++ b/src/main/java/com/dyw/client/form/RegisterForm.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.dyw.client.form.RegisterForm">
   <grid id="27dc6" binding="registerForm" layout-manager="GridBagLayout">
     <constraints>
-      <xy x="20" y="20" width="1223" height="817"/>
+      <xy x="20" y="20" width="1284" height="817"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -500,8 +500,17 @@
                   <gridbag weightx="0.0" weighty="0.0"/>
                 </constraints>
                 <properties>
-                  <font size="18"/>
+                  <font/>
                   <text value="替换旧照片"/>
+                </properties>
+              </component>
+              <component id="8e352" class="javax.swing.JButton" binding="takePhotoButton">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <text value="打开摄像头"/>
                 </properties>
               </component>
             </children>
