--- a/src/main/java/com/dyw/client/form/RegisterForm.form
+++ b/src/main/java/com/dyw/client/form/RegisterForm.form
@@ -398,13 +398,14 @@
                   <text value="是否刷身份证"/>
                 </properties>
               </component>
-              <component id="40ad9" class="javax.swing.JButton" binding="communicationStatusButton">
+              <component id="898d7" class="javax.swing.JButton" binding="communicationStatusButton">
                 <constraints>
-                  <grid row="0" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                  <gridbag top="0" left="30" bottom="0" right="10" weightx="0.0" weighty="0.0"/>
+                  <grid row="0" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                  <gridbag top="0" left="20" bottom="0" right="5" weightx="0.0" weighty="0.0"/>
                 </constraints>
                 <properties>
-                  <font size="18"/>
+                  <enabled value="false"/>
+                  <font size="16"/>
                   <text value="通信状态"/>
                 </properties>
               </component>
