--- a/src/main/java/com/dyw/client/form/EquipmentManagementForm.form
+++ b/src/main/java/com/dyw/client/form/EquipmentManagementForm.form
@@ -83,6 +83,16 @@
                   <text value="人脸模式"/>
                 </properties>
               </component>
+              <component id="d62f5" class="javax.swing.JButton" binding="refreshEquipmentStatusButton">
+                <constraints>
+                  <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <gridbag top="0" left="20" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <font size="20"/>
+                  <text value="刷新"/>
+                </properties>
+              </component>
             </children>
           </grid>
           <grid id="10753" binding="equipmentManagementContentPanel" layout-manager="GridBagLayout">
