--- a/src/main/java/com/dyw/client/form/MonitorHistoryForm.form
+++ b/src/main/java/com/dyw/client/form/MonitorHistoryForm.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.dyw.client.form.MonitorHistoryForm">
   <grid id="27dc6" binding="monitorHistoryForm" layout-manager="GridBagLayout">
     <constraints>
-      <xy x="20" y="20" width="904" height="400"/>
+      <xy x="20" y="20" width="1136" height="796"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -190,6 +190,16 @@
                     <properties>
                       <font size="20"/>
                       <text value="首  页"/>
+                    </properties>
+                  </component>
+                  <component id="7a974" class="javax.swing.JButton" binding="exportPassInfoButton">
+                    <constraints>
+                      <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <gridbag top="0" left="20" bottom="0" right="0" weightx="0.0" weighty="0.0"/>
+                    </constraints>
+                    <properties>
+                      <font size="20"/>
+                      <text value="导出记录"/>
                     </properties>
                   </component>
                 </children>
